<resources>
    <string name="app_name">Mikread</string>
    <string name="connect_to">Connect To:</string>
    <string name="login">Login:</string>
    <string name="default_ip">192.168.88.1</string>
    <string name="default_login">admin</string>
    <string name="password">Password:</string>
    <string name="default_password">********</string>
    <string name="add_set_btn">Add/Set</string>
    <string name="connect_btn">Connect</string>
    <string name="connecting">connecting…</string>
    <string name="removal">removing…</string>
    <string name="removal_step">removing… step</string>
    <string name="original_btn">Original</string>
    <string name="decoded_btn">Decoded</string>
    <string name="del_btn">Delete SMS file</string>
    <string name="del_router">Delete router</string>
    <string name="open_btn">Open SMS file</string>
    <string name="add_cert_btn">Add certificate</string>
    <string name="del_cert_btn">Delete certificate</string>
    <string name="address_field">Address</string>
    <string name="notice_row">Notice</string>
    <string name="user_field">User</string>
    <string name="note_field">Note</string>
    <string name="note_field2">Note:</string>
    <string name="routers_table">Routers table</string>
    <string name="sms_table">Sms table</string>
    <string name="router_row_description">Router: %1$s, User: %2$s, Note: %3$s</string>
    <string name="sms_row_description">Sms: %1$s</string>
    <string name="del_router_btn_description">Delete selected router</string>
    <string name="sort_routers_by_address">Sort routers by address</string>
    <string name="sort_routers_by_user">Sort routers by user</string>
    <string name="sort_routers_by_note">Sort routers by note</string>
    <string name="inbox_empty">no readable sms found</string>
    <string name="sms_remove_error">failed to remove sms</string>
    <string name="file_remove_error">failed to remove file</string>
    <string name="router_returned_error_code">router returned error code:</string>
    <string name="okhttp_error">error creating okhttp client</string>
    <string name="cert_import_error">certificate import error</string>
    <string name="choose_router">select a router with a www-ssl port</string>
    <string name="date_cert_before_error">error: the device date is earlier than the certificate issue date</string>
    <string name="date_cert_after_error">error: the certificate has expired</string>
    <string name="public_key_cert_error">error: certificate public keys do not match</string>
    <string name="sign_cert_error">error: certificate signature verification failed</string>
    <string name="main_cert_error">error: certificate verification failed</string>
    <string name="notice"><![CDATA[<br><br><b>
For information on deleting messages and email notifications about new sms, see <a href="https://github.com/safelogJ/mikread/blob/main/README.md"><b> GitHub</b> </a><br><br>
<b>You can leave a review on <a href="https://www.youtube.com/watch?v=jDvWbBmJsrQ&list=PL5Ch75WcmOXTx-dNMVtK-H6dT8Lc382nx&index=1"> YouTube </a></b> <br><br>
    <b>This application includes a third-party library:</b><br>
<b>mikrotik-java <a href="https://github.com/GideonLeGrange/mikrotik-java">https://github.com/GideonLeGrange/mikrotik-java</a></b><br>
   Licensed under the Apache License, Version 2.0.<br>
   <b>Author: Gideon le Grange</b><br><br>
]]></string>
</resources>