<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outerConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/winbox_btn_border_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/main_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Пара: Connect To -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="86dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/connect_to"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editRouterHost"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/field_bg_winbox"
                        android:hint="@string/default_ip"
                        android:inputType="textUri"
                        android:padding="8dp"
                        android:textColor="@color/winbox_text_main"
                        android:textColorHint="@color/winbox_text_hint" />
                </LinearLayout>

                <!-- Пара: Login -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="86dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/login"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLogin"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:autofillHints="username"
                        android:background="@drawable/field_bg_winbox"
                        android:hint="@string/default_login"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/winbox_text_main"
                        android:textColorHint="@color/winbox_text_hint" />
                </LinearLayout>

                <!-- Пара: Password -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="86dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/password"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:background="@drawable/field_bg_winbox"
                        android:drawableEnd="@drawable/visibility_off_20px"
                        android:hint="@string/default_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/winbox_text_main"
                        android:textColorHint="@color/winbox_text_hint" />
                </LinearLayout>

                <!-- Пара: Note -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="86dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/note_field2"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editRouterNote"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:autofillHints="name"
                        android:background="@drawable/field_bg_winbox"
                        android:inputType="textUri"
                        android:padding="8dp"
                        android:textColor="@color/winbox_text_main"
                        android:textColorHint="@color/winbox_text_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="86dp"
                        android:layout_height="wrap_content"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/btn_add_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/btn_winbox"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="6dp"
                        android:text="@string/add_set_btn"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <!-- Пружина: растягивается на всё свободное пространство -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/btn_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_winbox"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="6dp"
                        android:text="@string/connect_btn"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/btn_del"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_del_winbox"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <HorizontalScrollView
                android:id="@+id/errorScroll"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/btn_winbox"
                android:fillViewport="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="@+id/btn_del"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintStart_toEndOf="@+id/btn_del"
                app:layout_constraintTop_toTopOf="@+id/btn_del">

                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </HorizontalScrollView>

            <!-- Таблица сохранённых роутеров -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/router_table_bg"
                android:padding="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_del">

                <LinearLayout
                    android:id="@+id/linearLayoutTableTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- Колонка 1: Host/IP -->

                    <TextView
                        android:id="@+id/titleTextHost"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/router_title_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="8dp"
                        android:text="@string/address_field"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <!-- Колонка 2: Login -->

                    <TextView
                        android:id="@+id/titleTextLogin"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/router_title_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="8dp"
                        android:text="@string/user_field"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/titleTextNote"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/router_title_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="8dp"
                        android:text="@string/note_field"
                        android:textColor="@color/winbox_text_title_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ScrollView
                    android:id="@+id/routerScroll"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/routers_table"
                    android:fillViewport="true"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutTableTitle">

                    <LinearLayout
                        android:id="@+id/routerTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
